Updated css for events, deadlines and milestones to prevent the text overflowing the div. #Fix

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -231,8 +231,9 @@ section {
 }
 
 .occasionTitleDiv {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
+    width: 89%;
 }
 
 .occasionIcon {
